# super-duper-octo-train

./: README.md
backend/: .gitignore
frontend/: pyproject.toml
frontend/scripts/: run_gui.py
frontend/src/octo/: __main__.py  app.py  utils.py
